--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
