--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "ari-client": "^2.2.0",
+    "asterisk-ami-client": "^1.1.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.3",
